tests/error/modifier_errors/captured_classical_modified_branch.err
Error: Variable modified in modifier block (at $FILE:11:15)
   | 
 9 |         x += 1
10 |     if b:
11 |         return x
   |                ^ Cannot use `x` because it was modified inside a modifier
   |                  block

Note:
   | 
 8 |     with power(2):
 9 |         x += 1
   |         ------ `x` modified here

Help: Modifications inside modifier blocks are not reflected outside the block

Guppy compilation failed due to 1 previous error
